--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,29 @@
 /* TODO Add site wide styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body {
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  border: none;
+}
+
+.errors {
+  color: red;
+}
