--- a/react-app/src/components/DiscTile/DiscTile.css
+++ b/react-app/src/components/DiscTile/DiscTile.css
@@ -1,4 +1,6 @@
-.disc_tile__container {
-  width: 200px;
-  height: 400px;
+.disc_detail__container {
+  width: 300px;
+  height: 600px;
+  border-radius: 20px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
