--- a/react-app/src/components/DiscTile/DiscTile.css
+++ b/react-app/src/components/DiscTile/DiscTile.css
@@ -1,6 +1,22 @@
 .disc_detail__container {
   width: 300px;
-  height: 600px;
+  height: 350px;
   border-radius: 20px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.disc_detail__header {
+  padding: 15px 0;
+  border-bottom: 1px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.disc_detail__body {
+  padding-top: 10px;
 }
