--- a/react-app/src/components/DiscsLandingPage/DiscsLandingPage.css
+++ b/react-app/src/components/DiscsLandingPage/DiscsLandingPage.css
@@ -1,4 +1,51 @@
-.disc_landing__main {
+.disc_landing__container {
   display: flex;
   gap: 20px;
+  padding: 0 60px;
+  width: 1920px;
+}
+.disc_landing__filters {
+  min-width: 300px;
+  height: 75dvh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.disc_landing__submit {
+  height: 156px;
+  border-top: 1px solid #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+}
+.disc_landing__submit > button {
+  width: 200px;
+  height: 50px;
+  border-radius: 30px;
+  background-color: #d9d9d9;
+}
+
+.disc_landing__main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+}
+
+.disc_landing__main > div {
+  border-radius: 20px;
+}
+
+.disc_landing__search {
+  height: 50px;
+  margin: 20px 0;
+  border-radius: 40px;
+  background-color: #ffffff;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
