--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,3 +1,18 @@
+.navbar__container {
+  height: 96px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #284b63;
+}
+
+.navbar__main {
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 20px;
+  gap: 20px;
+}
+
 .profile-dropdown {
   position: absolute;
 }
