--- a/react-app/src/components/BagsLandingPage/BagsLandingPage.css
+++ b/react-app/src/components/BagsLandingPage/BagsLandingPage.css
@@ -1,7 +1,7 @@
 .bags__container {
   display: flex;
   flex-direction: column;
-  margin: 0 20px;
+  margin: 0 40px;
 }
 
 .bags__main {
@@ -19,37 +19,27 @@
 .bags__main > div {
   width: 100%;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  height: 700px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 20px;
 }
 
 .bags__in_bag {
   display: flex;
+  overflow-y: auto;
   flex-direction: column;
   gap: 10px;
   padding: 10px;
-  overflow-y: auto;
-  position: relative;
-}
-
-.bags__in_bag > div {
-  width: 100%;
-  border-radius: 20px;
-  border: 1px solid red;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  min-height: 100px;
 }
 
 .bags__add_btn {
-  width: 60px;
-  height: 60px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
   background-color: #284b63;
-  position: sticky;
-  z-index: 2;
-  bottom: 20px;
-  right: 200px;
+}
+
+.bags__flight_chart {
+  height: 600px;
 }
