--- a/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
+++ b/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
@@ -1,8 +1,18 @@
 .disc_details__main {
-  width: 80dvw;
-  height: 80dvh;
+  width: 80vw;
+  height: 90vh;
   display: flex;
   background-color: #faf9f9;
+}
+
+.disc_details__left-img {
+  grid-column: 1 / 4;
+  grid-row: 2 / 4;
+}
+
+.disc_details__left-img > img {
+  width: 300px;
+  height: 300px;
 }
 
 .disc_details__main > section {
@@ -15,13 +25,61 @@
 
 .disc_details__left {
   color: black;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.disc_details__left-table {
+  border-collapse: collapse;
+  margin: 25px 10px;
+  font-size: 0.8rem;
+  /* min-width: 100px; */
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.disc_details__left-table thead tr {
+  background-color: #284b63;
+  color: #ffffff;
+  text-align: center;
+}
+
+.disc_details__left-table th,
+td {
+  padding: 12px 15px;
+  text-align: center;
+}
+
+.disc_details__left-header {
+  border-bottom: 1px solid #000000;
+  width: 100%;
+  text-align: center;
+  height: 50px;
+  margin-top: 20px;
+  grid-column: 1 / 12;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+}
+.disc_details__left-header-bag {
+  position: relative;
+  display: flex;
+  gap: 20px;
 }
 
 .disc_details__right {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.disc_details__left-table.flight {
+  grid-column: 1 / 6;
+  grid-row: -1 / -2;
+}
+
+.disc_details__left-table.dimensions {
+  grid-column: 7 / 12;
+  grid-row: -1 / -2;
 }
