--- a/react-app/src/components/DiscDetailsModal/AddToBag.css
+++ b/react-app/src/components/DiscDetailsModal/AddToBag.css
@@ -4,11 +4,18 @@
   right: 20px;
   top: 40px;
   width: 300px;
-  height: 300px;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .hidden {
   display: none;
+}
+
+.add-to-bag__container > button {
+  width: 100px;
+  background-color: #284b63;
+  height: 30px;
+  border-radius: 10px;
+  color: white;
 }
