--- a/react-app/src/components/DiscFilterBar/DiscFilterBar.css
+++ b/react-app/src/components/DiscFilterBar/DiscFilterBar.css
@@ -1,3 +1,23 @@
 .disc-filters {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 20px;
+  width: 100%;
+  min-width: 100%;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.disc-filters select {
+  height: 40px;
+}
+
+.speed,
+.glide,
+.turn,
+.fade {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
