--- a/react-app/src/components/DiscTile/DiscTile.css
+++ b/react-app/src/components/DiscTile/DiscTile.css
@@ -1,16 +1,17 @@
 .disc_detail__container {
   width: 300px;
-  height: 300px;
+  height: 250px;
   border-radius: 20px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   background-color: #ffffff;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
 }
 
 .disc_detail__header {
-  padding: 15px 0;
+  padding: 20px;
   border-bottom: 1px solid black;
   width: 100%;
   display: flex;
@@ -18,5 +19,30 @@
 }
 
 .disc_detail__body {
-  padding-top: 10px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.disc_tile__flight {
+  border-collapse: collapse;
+  margin: 25px 10px;
+  font-size: 0.8rem;
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.disc_tile__flight thead tr {
+  background-color: #284b63;
+  color: #ffffff;
+  text-align: center;
+}
+
+.disc_tile__flight th,
+td {
+  padding: 12px 15px;
+  text-align: center;
 }
