--- a/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
+++ b/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
@@ -1,8 +1,7 @@
 .disc_details__main {
-  width: 90dvw;
-  height: 100%;
   display: flex;
   background-color: #faf9f9;
+  max-height: 600px;
 }
 
 .disc_details__left-img > img {
@@ -36,6 +35,7 @@
   margin: 25px 10px;
   font-size: 0.8rem;
   border-radius: 20px;
+  width: 50px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
@@ -81,4 +81,11 @@ td {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 50px;
+}
+
+@media screen and (max-width: 1350px) {
+  .disc_details__main {
+    overflow: auto;
+  }
 }
