--- a/react-app/src/components/DiscsLandingPage/DiscsLandingPage.css
+++ b/react-app/src/components/DiscsLandingPage/DiscsLandingPage.css
@@ -5,21 +5,32 @@
 .disc_landing__discs {
   display: flex;
   gap: 20px;
+  position: relative;
 }
 .disc_landing__filters {
-  width: 350px;
-  height: 75dvh;
+  width: 300px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
   border-radius: 20px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  position: absolute;
+  transition: ease 500ms;
+}
+
+.hide-filters {
+  transform: translate(-400px);
 }
 
 .disc_landing__submit {
-  height: 156px;
+  margin-top: 20px;
+  padding: 20px 0;
   border-top: 1px solid #000000;
   display: flex;
   flex-direction: column;
@@ -29,16 +40,17 @@
 }
 .disc_landing__submit > button {
   width: 200px;
-  height: 50px;
-  border-radius: 30px;
-  background-color: #d9d9d9;
+  height: 40px;
+  border-radius: 10px;
+  background-color: #284b63;
+  color: white;
+  margin-top: 10px;
 }
 
 .disc_landing__main {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: auto auto auto auto auto auto 1fr;
-  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   width: 100%;
 }
 
@@ -50,8 +62,6 @@
   height: 50px;
   margin: 10px 0;
   border-radius: 20px;
-  background-color: #ffffff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
   align-items: center;
   gap: 20px;
