--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -3,19 +3,28 @@
   display: flex;
   align-items: center;
   background-color: #284b63;
+  justify-content: space-evenly;
+  padding: 0 20px;
 }
 
 .navbar__main {
   display: flex;
-  justify-content: flex-start;
   padding-left: 20px;
+  width: 100%;
   gap: 20px;
 }
 
 .profile-dropdown {
   position: absolute;
+  right: 20px;
 }
 
 .hidden {
   display: none;
+}
+
+.navbar__container .active {
+  background-color: #376789;
+  border-radius: 10px;
+  padding: 10px;
 }
