--- a/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
+++ b/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
@@ -1,7 +1,8 @@
 .disc_details__main {
   display: flex;
   background-color: #faf9f9;
-  max-height: 600px;
+  max-height: 700px;
+  justify-content: center;
 }
 
 .disc_details__left-img > img {
@@ -10,11 +11,11 @@
 }
 
 .disc_details__main > section {
-  width: 100%;
   margin: 30px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 20px;
   background-color: #ffffff;
+  flex: 1;
 }
 
 .disc_details__left {
@@ -22,12 +23,12 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  max-width: 600px;
 }
 
 .disc_details__left-table {
   display: flex;
   justify-content: space-around;
-  width: 100%;
 }
 
 .disc_details__left-table table {
@@ -53,7 +54,7 @@ td {
 
 .disc_details__left-header {
   border-bottom: 1px solid #000000;
-  width: 100%;
+
   text-align: center;
   height: 50px;
   margin-top: 20px;
@@ -81,11 +82,18 @@ td {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
 }
 
-@media screen and (max-width: 1350px) {
+@media screen and (max-width: 1144px) {
   .disc_details__main {
-    overflow: auto;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+  }
+
+  .disc_details__left-table {
+    flex-wrap: wrap;
+  }
+  .disc_details__left-img-description {
+    flex-wrap: wrap;
   }
 }
