--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 40px;
+  margin: 20px;
 }
 
 #modal-background {
@@ -22,4 +22,5 @@
 #modal-content {
   position: absolute;
   background-color: white;
+  width: fit-content;
 }
