styling imporvements, worked on all modals

--- a/react-app/src/components/BaggedTypeTile/BaggedTypeTile.css
+++ b/react-app/src/components/BaggedTypeTile/BaggedTypeTile.css
@@ -21,3 +21,7 @@
   object-fit: cover;
   border-radius: 50%;
 }
+
+.bagged-type-tile__container > button:hover {
+  background-color: transparent;
+}
