--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -17,10 +17,13 @@
   left: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  z-index: 25;
 }
 
 #modal-content {
   position: absolute;
   background-color: white;
   width: fit-content;
+  border-radius: 20px;
+  z-index: 50;
 }
