--- a/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
+++ b/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
@@ -22,6 +22,7 @@
   color: black;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   gap: 10px;
   max-width: 600px;
 }
