full aws integration. cleaned up forms. styled most of the app

--- a/react-app/src/components/BaggedTypeTile/BaggedTypeTile.css
+++ b/react-app/src/components/BaggedTypeTile/BaggedTypeTile.css
@@ -22,6 +22,6 @@
   border-radius: 50%;
 }
 
-.bagged-type-tile__container > button:hover {
+.bagged-type-tile__container button:hover {
   background-color: transparent;
 }
