--- a/react-app/src/components/BaggedType/BaggedType.css
+++ b/react-app/src/components/BaggedType/BaggedType.css
@@ -9,7 +9,7 @@
 
 .bagged-type__container > h1 {
   border-bottom: 1px solid black;
-  padding: 10px 0;
+  padding-bottom: 10px;
 }
 
 .bagged-type__discs {
