--- a/react-app/src/components/CreateDiscForm/CreateDiscForm.css
+++ b/react-app/src/components/CreateDiscForm/CreateDiscForm.css
@@ -1,19 +1,23 @@
 .create_disc__main {
   display: flex;
   flex-direction: column;
+
   padding: 20px;
-  gap: 10px;
+  gap: 20px;
+}
+
+.create_disc__form table {
+  margin: 0;
 }
 
 .create_disc__main textarea,
 input,
 select {
-  color: #757575;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 40px;
   border-radius: 10px;
   padding-left: 10px;
   border: none;
@@ -42,7 +46,7 @@ select {
 
 .create_disc__form {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 .create_disc__form > div {
   width: 100%;
