--- a/react-app/src/components/AdminDashboard/AdminDashboard.css
+++ b/react-app/src/components/AdminDashboard/AdminDashboard.css
@@ -17,5 +17,15 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 20px;
   overflow-y: auto;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.admin__main div > h2 {
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 10px 0;
+  border-bottom: 1px solid #000000;
+  width: 100%;
 }
