--- a/react-app/src/components/AdminDiscTile/AdminDiscTile.css
+++ b/react-app/src/components/AdminDiscTile/AdminDiscTile.css
@@ -1,3 +1,23 @@
 .admin-disc__main {
   display: flex;
+  min-height: 50px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.admin-disc__edit {
+  display: flex;
+  gap: 20px;
+}
+
+.admin-disc__edit > button {
+  width: 100px;
+  height: 40px;
+  background-color: #284b63;
+  border-radius: 10px;
+  color: #ffffff;
 }
