--- a/react-app/src/components/BagDetailsPage/BagDetailsPage.css
+++ b/react-app/src/components/BagDetailsPage/BagDetailsPage.css
@@ -27,8 +27,20 @@
   flex-direction: column;
   gap: 10px;
   padding: 10px;
+  position: relative;
 }
 
 .bags__flight_chart {
-  height: 600px;
+  height: 700px;
+}
+
+.bags__add-discs-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #284b63;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  position: absolute;
+  right: 20px;
+  top: 10px;
 }
