--- a/react-app/src/components/BaggedType/BaggedType.css
+++ b/react-app/src/components/BaggedType/BaggedType.css
@@ -16,7 +16,5 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 90%;
-  margin: 0 auto;
-  padding-top: 10px;
+  padding: 10px;
 }
