added toast package

--- a/react-app/src/components/CreateBaggedDiscForm/CreateBaggedDiscForm.css
+++ b/react-app/src/components/CreateBaggedDiscForm/CreateBaggedDiscForm.css
@@ -40,3 +40,16 @@ select {
   height: 30px;
   border: none;
 }
+
+.toast-alert button:hover {
+  background-color: transparent;
+}
+
+.toast-alert button:active {
+  background-color: transparent;
+}
+
+.toast-alert > div {
+  display: flex;
+  justify-content: space-between;
+}
