--- a/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
+++ b/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
@@ -71,6 +71,12 @@ td {
   gap: 20px;
 }
 
+.disc_details__left-description {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+
 .disc_details__left-img-description {
   display: flex;
   gap: 20px;
