responsive design, cleaning up styling

--- a/react-app/src/components/AdminDashboard/AdminDashboard.css
+++ b/react-app/src/components/AdminDashboard/AdminDashboard.css
@@ -13,3 +13,10 @@
   padding: 10px 0;
   width: 100%;
 }
+
+@media screen and (max-width: 1000px) {
+  .admin__main {
+    display: flex;
+    flex-direction: column;
+  }
+}
