--- a/react-app/src/components/CreateBaggedDiscForm/CreateBaggedDiscForm.css
+++ b/react-app/src/components/CreateBaggedDiscForm/CreateBaggedDiscForm.css
@@ -41,15 +41,16 @@ select {
   border: none;
 }
 
-.toast-alert button:hover {
-  background-color: transparent;
-}
-
-.toast-alert button:active {
-  background-color: transparent;
+.toast-alert button {
+  width: 100px;
+  height: 40px;
+  background-color: #284b63;
+  border-radius: 10px;
+  color: white;
 }
 
 .toast-alert > div {
+  margin-top: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
