--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -1,7 +1,13 @@
 .home__main {
   display: flex;
   gap: 20px;
-  justify-content: center;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.home__info_container {
+  flex: 1 1 0px;
+  display: flex;
 }
 
 .home__info {
@@ -9,15 +15,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  height: 500px;
 }
 
 .home__info-btns {
   display: flex;
   justify-content: space-around;
 }
+.home__info_img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 .home__info-btns > button {
-  width: 200px;
+  width: 9rem;
   height: 50px;
   background-color: #284b63;
   border-radius: 10px;
@@ -27,14 +39,23 @@
 }
 
 .home__courses {
+  height: 500px;
+  position: relative;
+  text-align: center;
+}
+
+.home__courses > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.courses-overlay {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 400px;
-  background-color: #03060a;
-  color: white;
-}
-
-.home__img {
-  width: 100%;
 }
