--- a/react-app/src/components/BagDetailsPage/BagDetailsPage.css
+++ b/react-app/src/components/BagDetailsPage/BagDetailsPage.css
@@ -45,6 +45,11 @@
   top: 10px;
 }
 
+.bags__button-div {
+  height: 40px;
+  text-align: center;
+}
+
 @media screen and (max-width: 1144px) {
   .bags__main {
     flex-direction: column;
