--- a/react-app/src/components/CourseRounds/CourseRounds.css
+++ b/react-app/src/components/CourseRounds/CourseRounds.css
@@ -1,46 +1,27 @@
-.course-details__container {
-  height: 70vh;
+.course-rounds__container {
+  height: 50vh;
   width: 100%;
   padding: 10px;
   margin: 0 auto;
 }
 
-.course-details__options-container > h3 {
+.course-rounds__options-container > h3 {
   margin: 10px 0;
   text-align: center;
 }
 
-.course-details__map {
+.course-rounds__map {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 20px;
   width: 100%;
   height: 100%;
 }
-.course-details__options-container {
+.course-rounds__options-container {
   display: flex;
   flex-direction: column;
 }
 
-.course-details__navigation {
-  display: flex;
-  gap: 10px;
-  border-radius: 10px;
-  height: auto;
-  padding: 15px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  overflow-x: scroll;
-  overflow-y: hidden;
-}
-
-.course-details__navigation > button {
-  min-width: 100px;
-  height: 40px;
-  background-color: #284b63;
-  border-radius: 10px;
-  color: white;
-}
-
-.course-details__next-prev {
+.course-rounds__next-prev {
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -48,7 +29,7 @@
   padding: 10px;
 }
 
-.course-details__next-prev > button {
+.course-rounds__next-prev > button {
   width: 100px;
   height: 30px;
   border-radius: 10px;
@@ -68,7 +49,7 @@
   font-weight: bold;
 }
 
-.course-details__actions {
+.course-rounds__actions {
   display: flex;
   justify-content: center;
   gap: 20px;
