--- a/react-app/src/components/CoursesLandingPage/CoursesLandingPage.css
+++ b/react-app/src/components/CoursesLandingPage/CoursesLandingPage.css
@@ -1,5 +1,16 @@
-.course-landing__container {
+.course-landing__container > button {
+  background-color: #284b63;
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  width: 120px;
+  height: 50px;
+  border-radius: 10px;
+  color: white;
+}
+
+.course-landing__main {
   display: flex;
-  flex-direction: column;
+  gap: 20px;
   margin: 20px;
 }
