--- a/react-app/src/components/CreateBagForm/CreateBagForm.css
+++ b/react-app/src/components/CreateBagForm/CreateBagForm.css
@@ -2,13 +2,13 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
+  min-width: 300px;
   gap: 10px;
 }
 
 .create_bag__main > input,
 textarea {
   padding: 20px;
-  width: 400px;
   border-radius: 10px;
   border: none;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
