--- a/react-app/src/components/CreateDiscForm/CreateDiscForm.css
+++ b/react-app/src/components/CreateDiscForm/CreateDiscForm.css
@@ -51,3 +51,17 @@ select {
 .create_disc__form > div {
   width: 100%;
 }
+
+.toast-alert button {
+  width: 100px;
+  height: 40px;
+  background-color: #284b63;
+  border-radius: 10px;
+  color: white;
+}
+
+.toast-alert > div {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
