--- a/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
+++ b/react-app/src/components/DiscDetailsModal/DiscDetailsModal.css
@@ -3,6 +3,7 @@
   background-color: #faf9f9;
   max-height: 700px;
   justify-content: center;
+  border-radius: 20px;
 }
 
 .disc_details__left-img > img {
