--- a/react-app/src/components/CourseInfoPage/CourseInfoPage.css
+++ b/react-app/src/components/CourseInfoPage/CourseInfoPage.css
@@ -1,10 +1,12 @@
 .course-info__container {
   display: flex;
-  width: 800px;
   align-items: center;
+  min-width: 375px;
+  max-width: 1200px;
   margin: 0 auto;
   flex-direction: column;
   gap: 20px;
+  padding: 10px;
 }
 
 .course-info__header {
@@ -24,6 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  max-width: 1200px;
 }
 
 .course-info__main > div {
@@ -34,6 +37,11 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  flex-grow: 1;
-  min-width: 250px;
+  min-width: 400px;
+}
+
+.course-info__details,
+.course-info__contact {
+  flex: 1;
+  min-width: 350px;
 }
