--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -1,13 +1,13 @@
 .footer__container {
   background-color: #000000;
-  height: 150px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
+  padding: 20px;
   gap: 20px;
-  margin-top: 20px;
 }
 
 .footer__container i {
