--- a/react-app/src/components/DeleteModal/DeleteModal.css
+++ b/react-app/src/components/DeleteModal/DeleteModal.css
@@ -1,11 +1,11 @@
 .delete-modal__container {
   width: 350px;
-  height: 150px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 
 .delete-modal__container > div {
